Update Vaadin and switch GC to ZGC
Update Vaadin and versions pluginThe commit includes updates to the Vaadin and Plugin versions. Specifically, the '@vaadin' dependencies were updated from version "24.1.1" to "24.1.3". This update was necessary to utilize the newer features and improvements made in Vaadin's latest release. The 'jpushover.version' property, used for sending push notifications, was also updated from '7.0.2' to '7.0.3' to incorporate bug fixes and stability improvements. Additionally, Dockerfile was updated to promote better garbage collection runtime performance by enabling the dynamic GC thread policy.